# predOS

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  readme.md
.github/workflows/: cmake-multi-platform.yml  cmake-platform.yml
cmake/: create_mock.cmake  create_test.cmake  link.ld  toolchain-arm-none-eabi-rpi1.cmake
compiler/: .compiler.md5  .compiler_config  link.ld  toolchain-arm-none-eabi-rpi1.cmake
docs/: Commands.md  Untitled.md  debug_interface.md  emmc.md  file_system.md  mem_layout.canvas  mmu.md
docs/.obsidian/: workspace.json
scripts/: .env  build.sh  cmd.py  common_build.sh  flash.py  get_compiler.sh  get_dependencies.sh  get_firmware.sh  get_firmware_repo.sh  img_add_file.sh  img_init.sh  make_card.sh  uart.ps1
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/blink/: CMakeLists.txt  main.c
src/apps/blinkd/: CMakeLists.txt  main.c
src/apps/echo/: CMakeLists.txt  main.c
src/apps/example/: CMakeLists.txt  example.c  example.h
src/apps/init/: CMakeLists.txt  main.c
src/apps/ps/: CMakeLists.txt  main.c
src/apps/shell/: CMakeLists.txt  main.c
src/apps/start/: CMakeLists.txt  start.S
src/common/: app_log.h  arm_defines.S  log_level.h  status.h  sys_log.h  util.h
src/drivers/: CMakeLists.txt
src/drivers/arm_timer/: CMakeLists.txt  arm_timer.c
src/drivers/bcm2835/: CMakeLists.txt  bcm2835.c  bcm2835.h
src/drivers/emmc/: CMakeLists.txt  emmc.c
src/drivers/emmc/inc/: emmc_def.h
src/drivers/gpio/: CMakeLists.txt  gpio.c
src/drivers/interfaces/: arm_timer.h  emmc.h  gpio.h  gpio_def.h  power_management.h  sys_timer.h  uart.h
src/drivers/power_management/: CMakeLists.txt  power_management.c
src/drivers/soc/: CMakeLists.txt
src/drivers/soc/bcm2835/: CMakeLists.txt  bcm2835.c  bcm2835.h
src/drivers/soc/bcm2835/gpio/: CMakeLists.txt
src/drivers/soc/bcm2835/sys_timer/: CMakeLists.txt  sys_timer.c
src/drivers/soc/bcm2835/uart/: CMakeLists.txt  uart.c
src/drivers/sys_timer/: CMakeLists.txt  sys_timer.c
src/drivers/uart/: CMakeLists.txt  uart.c
src/kernel/: CMakeLists.txt  arm_defines.S  boot.S  cstub.c  debug_interface.c  debug_interface.h  exception_handlers.S  exception_handlers.c  fat.c  fat.h  init.c  isr.S  isr.c  kernel.S  kernel.c  kernel.h  main.c  mmu.S  mmu.c  mmu.h  mmu_descriptors.h  syscall.c
src/kernel/boot/: CMakeLists.txt  boot.S
src/kernel/elf/: CMakeLists.txt  elf.c  elf.h
src/kernel/fat/: CMakeLists.txt  fat.c  fat.h
src/kernel/fat/test/: CMakeLists.txt  test_fat.c
src/kernel/isr/: CMakeLists.txt  isr.S  isr.c  svc.c  svc.h
src/kernel/mmu/: CMakeLists.txt  mmu.S  mmu.c  mmu.h  mmu_descriptors.h
src/kernel/proc/: CMakeLists.txt  proc.c  proc.h
src/kernel/syscall/: CMakeLists.txt  syscall.c  syscall.h
test/: CMakeLists.txt
